# pointr

./: .pre-commit-config.yaml  README.md  docker-compose.yml
pointr/: .env.example  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
pointr/api/: admin.py  models.py  serializers.py  utils.py  views.py
pointr/api/migrations/: 0001_initial.py
pointr/api/tests/: test_utils.py  test_views.py
pointr/pointr/: asgi.py  settings.py  urls.py  wsgi.py
