[tool.poetry]
name = "pointr"
version = "0.1.0"
description = ""
authors = ["jimmykamau <jimmykambiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
dj-database-url = "^2.0.0"
djangorestframework = "^3.14.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
